# notification_service

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
notifications/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
