[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["kirill_barkhatov <k.s.barkhatov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
redis = "^5.2.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.2"
celery-stubs = "^0.1.3"
drf-yasg-stubs = "^0.1.4"
djangorestframework-stubs = "^3.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"  # укажите ваш модуль настроек
strict_settings = true  # можно оставить или изменить в зависимости от потребностей

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
